# Skeleton-Based-Fall-Recognition

./: .gitignore  pyproject.toml
.cursor/rules/: ml-engineer.mdc
.devcontainer/: Dockerfile  docker-compose.yml
src/: test.ipynb  unzip_data.sh
