[project]
name = "fall-detection"
version = "0.1.0"
description = ""
authors = [
    {name = "minhhoang2705",email = "tranhminh8464@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
]
[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
